--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,11 @@
             <version>2.8.4</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>org.bytedeco.javacpp-presets</groupId>
+            <artifactId>llvm-platform</artifactId>
+            <version>6.0.1-1.4.2</version>
+        </dependency>
     </dependencies>
 
 
